Apply SP gui visuals to MP. Fix label gap in MP gui

--- a/snake-desktop/src/main/resources/css/game_window.css
+++ b/snake-desktop/src/main/resources/css/game_window.css
@@ -1,18 +1,29 @@
-.label
-{
-    -fx-font-family: "Comic Sans MS";
-    -fx-font-size: 12;
-    -fx-wrap-text: true;
-}
-
 .root
 {
-    -fx-min-width: 960;
-    -fx-min-height: 540;
-    -fx-pref-width: 1280;
-    -fx-pref-height: 720;
+    -fx-background-image: url("../images/sneak_bakkground.jpg");
+}
+
+.infoLabel
+{
+    -fx-font-family: "Comic Sans MS";
     -fx-max-width: infinity;
     -fx-max-height: infinity;
-    -fx-background-image: url('../images/sneak_bakkground.jpg');
-    -fx-background-size: stretch;
+    -fx-background-color: black;
+    -fx-text-fill: white;
+    -fx-alignment: center;
+}
+
+.menu-bar
+{
+    -fx-background-color: purple;
+}
+
+.menu
+{
+    -fx-background-color: purple;
+}
+
+.menu-item
+{
+    -fx-background-color: purple;
 }
